--- a/Avaliacao_02/bin/principalApp/Avaliacao2.fxml
+++ b/Avaliacao_02/bin/principalApp/Avaliacao2.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -19,162 +18,157 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="principalApp.Avaliacao2Controller">
-	<center>
-		<HBox BorderPane.alignment="CENTER">
-			<children>
-				<ScrollPane fx:id="audioOri" hbarPolicy="ALWAYS" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" vbarPolicy="ALWAYS">
-					<content>
-						<AnchorPane>
-							<children>
-                        <ListView fx:id="originalAudio" layoutX="32.0" layoutY="14.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-							</children>
-						</AnchorPane>
-					</content>
-					<HBox.margin>
-						<Insets bottom="5.0" right="5.0" top="5.0" />
-					</HBox.margin>
-				</ScrollPane>
-			</children>
-		</HBox>
-	</center>
-	<top>
-		<MenuBar BorderPane.alignment="CENTER">
-			<menus>
-				<Menu mnemonicParsing="false" text="Arquivo">
-					<items>
-                  <MenuItem mnemonicParsing="false" onAction="#selecionaDataSetTeste" text="Seleciona arff" />
-					</items>
-				</Menu>
-			</menus>
-		</MenuBar>
-	</top>
-	<right>
-		<VBox alignment="TOP_CENTER" BorderPane.alignment="CENTER">
-			<children>
-				<Label alignment="CENTER" contentDisplay="CENTER" text="Informações" textAlignment="CENTER" VBox.vgrow="SOMETIMES">
-					<font>
-						<Font name="System Bold" size="12.0" />
-					</font>
-					<padding>
-						<Insets top="5.0" />
-					</padding>
-				</Label>
-				<HBox>
-					<children>
-						<VBox prefWidth="140.0" HBox.hgrow="ALWAYS">
-							<children>
-								<TitledPane animated="false" text="MultilayerPerceptron">
-									<content>
-										<AnchorPane minHeight="0.0" minWidth="0.0" scaleShape="false">
-											<children>
-												<GridPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-													<columnConstraints>
-														<ColumnConstraints prefWidth="50.0" />
-														<ColumnConstraints hgrow="SOMETIMES" />
-													</columnConstraints>
-													<rowConstraints>
-														<RowConstraints prefHeight="30.0" />
-														<RowConstraints prefHeight="30.0" />
-														<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-													</rowConstraints>
-													<children>
-														<Label text="Resultado" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-															<font>
-																<Font name="System Bold" size="12.0" />
-															</font>
-														</Label>
-														<Label text="Cat" GridPane.rowIndex="1" />
-														<Label text="Dog" GridPane.rowIndex="2" />
-														<Label fx:id="classificaCat" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-														<Label fx:id="classificaDog" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-													</children>
-												</GridPane>
-											</children>
-										</AnchorPane>
-									</content>
-									<VBox.margin>
-										<Insets />
-									</VBox.margin>
-									<padding>
-										<Insets top="5.0" />
-									</padding>
-								</TitledPane>
-							</children>
-							<HBox.margin>
-								<Insets bottom="5.0" top="5.0" />
-							</HBox.margin>
-						</VBox>
-					</children>
-				</HBox>
-				<TitledPane animated="false" text="MultilayerPerceptron">
-					<content>
-						<AnchorPane minHeight="0.0" minWidth="0.0" scaleShape="false">
-							<children>
-								<GridPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-									<columnConstraints>
-										<ColumnConstraints halignment="LEFT" maxWidth="140.0" prefWidth="140.0" />
-										<ColumnConstraints halignment="LEFT" maxWidth="130.0" prefWidth="130.0" />
-										<ColumnConstraints maxWidth="30.0" prefWidth="30.0" />
-										<ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="1.7976931348623157E308" />
-									</columnConstraints>
-									<rowConstraints>
-										<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-										<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-										<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-									</rowConstraints>
-									<children>
-										<Label text="GenericObjectEditor" GridPane.halignment="LEFT" GridPane.valignment="CENTER">
-											<font>
-												<Font name="System Bold" size="12.0" />
-											</font>
-										</Label>
-										<HBox alignment="CENTER_LEFT" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.valignment="CENTER">
-											<children>
-												<Label text="Tempo de treinamento" textAlignment="CENTER">
-													<HBox.margin>
-														<Insets />
-													</HBox.margin>
-												</Label>
-												<TextField fx:id="txtTempoTreinamento" prefWidth="50.0">
-													<HBox.margin>
-														<Insets left="5.0" />
-													</HBox.margin>
-												</TextField>
-											</children>
-										</HBox>
-										<HBox alignment="CENTER_LEFT" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.valignment="CENTER">
-											<children>
-												<Label text="Taxa de Aprendizagem" textAlignment="CENTER">
-													<HBox.margin>
-														<Insets />
-													</HBox.margin>
-												</Label>
-												<TextField fx:id="txtTaxaAprendizagem" prefWidth="50.0">
-													<HBox.margin>
-														<Insets left="5.0" />
-													</HBox.margin>
-												</TextField>
-											</children>
-											<GridPane.margin>
-												<Insets left="-85.0" />
-											</GridPane.margin>
-										</HBox>
-										<HBox alignment="CENTER_LEFT" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
-											<children>
-												<Button fx:id="btExec" mnemonicParsing="false" onAction="#executaConfiguracao" text="Executar configuração" />
-											</children>
-										</HBox>
-									</children>
-								</GridPane>
-							</children>
-						</AnchorPane>
-					</content>
-				</TitledPane>
-			</children>
-			<BorderPane.margin>
-				<Insets bottom="5.0" right="5.0" />
-			</BorderPane.margin>
-		</VBox>
-	</right>
+<BorderPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="principalApp.Avaliacao2Controller">
+   <top>
+      <MenuBar BorderPane.alignment="CENTER">
+        <menus>
+          <Menu mnemonicParsing="false" text="Arquivo">
+            <items>
+              <MenuItem mnemonicParsing="false" onAction="#selecionaAudio" text="Selecionar .arff" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
+   </top>
+   <center>
+      <VBox alignment="TOP_CENTER" BorderPane.alignment="CENTER">
+         <children>
+            <Label alignment="CENTER" contentDisplay="CENTER" text="Informações" textAlignment="CENTER" VBox.vgrow="SOMETIMES">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+               <padding>
+                  <Insets top="5.0" />
+               </padding>
+            </Label>
+            <TitledPane animated="false" text="MultilayerPerceptron">
+               <content>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" scaleShape="false">
+                     <children>
+                        <GridPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <columnConstraints>
+                              <ColumnConstraints halignment="LEFT" maxWidth="140.0" prefWidth="140.0" />
+                              <ColumnConstraints halignment="LEFT" maxWidth="130.0" prefWidth="130.0" />
+                              <ColumnConstraints maxWidth="30.0" prefWidth="30.0" />
+                              <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="1.7976931348623157E308" />
+                           </columnConstraints>
+                           <rowConstraints>
+                              <RowConstraints minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
+                           </rowConstraints>
+                           <children>
+                              <Label text="GenericObjectEditor" GridPane.halignment="LEFT" GridPane.valignment="CENTER">
+                                 <font>
+                                    <Font name="System Bold" size="12.0" />
+                                 </font>
+                              </Label>
+                              <HBox alignment="CENTER_LEFT" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                                 <children>
+                                    <Label text="Tempo de treinamento" textAlignment="CENTER">
+                                       <HBox.margin>
+                                          <Insets />
+                                       </HBox.margin>
+                                    </Label>
+                                    <TextField fx:id="txtTempoTreinamento" prefWidth="50.0">
+                                       <HBox.margin>
+                                          <Insets left="5.0" />
+                                       </HBox.margin>
+                                    </TextField>
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER_LEFT" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                                 <children>
+                                    <Label text="Taxa de Aprendizagem" textAlignment="CENTER">
+                                       <HBox.margin>
+                                          <Insets />
+                                       </HBox.margin>
+                                    </Label>
+                                    <TextField fx:id="txtTaxaAprendizagem" prefWidth="50.0">
+                                       <HBox.margin>
+                                          <Insets left="5.0" />
+                                       </HBox.margin>
+                                    </TextField>
+                                 </children>
+                                 <GridPane.margin>
+                                    <Insets left="-85.0" />
+                                 </GridPane.margin>
+                              </HBox>
+                              <HBox alignment="CENTER_LEFT" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                                 <children>
+                                    <Button mnemonicParsing="false" onAction="#executaConfiguracao" text="Executar configuração">
+                                       <HBox.margin>
+                                          <Insets />
+                                       </HBox.margin></Button>
+                                 </children>
+                              </HBox>
+                           </children>
+                        </GridPane>
+                     </children>
+                  </AnchorPane>
+               </content>
+            </TitledPane>
+            <HBox>
+               <children>
+                  <VBox prefWidth="140.0" HBox.hgrow="ALWAYS">
+                     <children>
+                        <TitledPane animated="false" text="MultilayerPerceptron">
+                           <content>
+                              <AnchorPane minHeight="0.0" minWidth="0.0" scaleShape="false">
+                                 <children>
+                                    <GridPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                       <columnConstraints>
+                                          <ColumnConstraints prefWidth="50.0" />
+                                          <ColumnConstraints hgrow="SOMETIMES" />
+                                       </columnConstraints>
+                                       <rowConstraints>
+                                          <RowConstraints prefHeight="30.0" />
+                                          <RowConstraints prefHeight="30.0" />
+                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                       </rowConstraints>
+                                       <children>
+                                          <Label text="Resultado" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                                             <font>
+                                                <Font name="System Bold" size="12.0" />
+                                             </font>
+                                          </Label>
+                                          <Label text="Cat" GridPane.rowIndex="1" />
+                                          <Label text="Dog" GridPane.rowIndex="2" />
+                                          <Label fx:id="classificaCat" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                          <Label fx:id="classificaDog" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                       </children>
+                                    </GridPane>
+                                 </children>
+                              </AnchorPane>
+                           </content>
+                           <VBox.margin>
+                              <Insets />
+                           </VBox.margin>
+                           <padding>
+                              <Insets top="5.0" />
+                           </padding>
+                        </TitledPane>
+                     </children>
+                     <HBox.margin>
+                        <Insets bottom="5.0" top="5.0" />
+                     </HBox.margin>
+                  </VBox>
+               </children>
+            </HBox>
+         </children>
+         <BorderPane.margin>
+            <Insets bottom="5.0" left="5.0" right="2.0" />
+         </BorderPane.margin>
+         <padding>
+            <Insets right="10.0" />
+         </padding>
+      </VBox>
+   </center>
+   <left>
+      <ListView fx:id="lvFile" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </BorderPane.margin>
+      </ListView>
+   </left>
 </BorderPane>
